Kubernetes/PizzaIdpPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pizzaidp
  labels:
    app: pizzaidp
spec:
  hostname: idp
  containers:
  - name: pizzaidp
    image: pizzatime.idp:latest
    imagePullPolicy: IfNotPresent
    resources:
      limits:
        memory: "1024Mi"
        cpu: "500m"
    ports:
      - name: httpservice
        containerPort: 8080

  - name: database
    image: docker.io/mysql
    ports:
    - name:  database
      containerPort: 3306
    resources:
      limits:
        cpu: "50m"
        memory: 2Gi
      requests:
        cpu: "50m"
        memory: 1Gi
    volumeMounts:
    - name:  database-volume
      mountPath: /var/lib/mysql
    
  volumes:
  - name:  database-volume
    persistentVolumeClaim:
      claimName: idp-pvc
  restartPolicy: OnFailure


---

apiVersion: v1
kind: Service
metadata:
  name: idp-service
spec:
  type: ClusterIP
  selector:
    app: pizzaidp
  ports:
  - port: 8080
    targetPort: 8080
