Kubernetes/PizzaOrderService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizzaorders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pizzaorders
  template:
    metadata:
      labels:
        app: pizzaorders
    spec:
      containers:
      - name: pizzaorder
        image: pizzatime.orderservice:latest
        imagePullPolicy: Never
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
          - name: httpservice
            containerPort: 8080

      - name: database
        image: docker.io/mysql
        ports:
        - name:  database
          containerPort: 3306
        resources:
          limits:
            cpu: "500m"
            memory: "1Gi"
        volumeMounts:
        - name:  database-volume
          mountPath: /var/lib/mysql

      volumes:
      - name:  database-volume
        persistentVolumeClaim:
          claimName: ord-pvc


---

apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: ClusterIP
  selector:
    app: pizzaorders
  ports:
  - port: 8080
    targetPort: 8080
