Kubernetes/RabbitMqPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rabbitmqbroker
  labels:
    app: rabbitmqbroker
spec:
  containers:
  - name: rabbitmqbroker
    image: docker.io/rabbitmq:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "100m"
    ports:
      - containerPort: 1883
        name: mqtt
      - containerPort: 4369
        name: clustering
      - containerPort: 5672
        name: amqp
      - containerPort: 15672
        name: http-management
---
apiVersion: v1
kind: Service
metadata:
  name: brokerservice
spec:
  type: ClusterIP
  selector:
    app: rabbitmqbroker  # Corrisponde alla label del pod
  ports:
  - port: 5672
    targetPort: 5672
    name: amqpport
  - port: 15672
    targetPort: 15672
    name: http-managementport
