Kubernetes/KongIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kongingress
  labels:
    name: kongingress
spec:
  ingressClassName: kong
  rules:
  - host: <Host>
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: <Service>
            port: 
              number: <Port>
